<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context=".RegisterFragment">

    <!-- Display the register title -->
    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/title_register"
        android:textAlignment="center"
        android:textColor="@color/light_blue"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <!-- Continue button -->
    <Button
        android:id="@+id/b_continue_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/button_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_title"
        app:layout_constraintVertical_bias="0.935" />

    <!-- Get input from user for the user name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/til_email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_edit_text"
            android:gravity="center_horizontal"
            android:hint="@string/def_full_name"
            android:inputType="textPersonName"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Get input from user for the email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_user_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_email_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_edit_text"
            android:gravity="center_horizontal"
            android:hint="@string/def_email_address"
            android:inputType="textEmailAddress"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Get input from user for the password confirm -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/b_continue_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/til_password"
        app:layout_constraintTop_toBottomOf="@+id/til_email_address"
        app:layout_constraintVertical_bias="0.185">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_edit_text"
            android:gravity="center_horizontal"
            android:hint="@string/def_password_confirm"
            android:inputType="textPassword"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Get input from user for the password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/b_continue_register"
        app:layout_constraintEnd_toStartOf="@+id/til_password_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email_address"
        app:layout_constraintVertical_bias="0.185">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_edit_text"
            android:gravity="center_horizontal"
            android:hint="@string/def_password"
            android:inputType="textPassword"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>