<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_root_dialog_validate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:paddingLeft="100dp"
    android:paddingRight="100dp"
    android:paddingBottom="32dp">

    <!-- Display the validate code -->
    <TextView
        android:id="@+id/tv_validate_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/round_text_view"
        android:elevation="30dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Continue button -->
    <Button
        android:id="@+id/b_continue_validate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/button_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_validate_code" />

    <!-- Get input from user for the validate code -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_validate_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_validate_code">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_validate_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_edit_text"
            android:digits="@string/accepted_dialog_digits"
            android:gravity="center_horizontal"
            android:hint="@string/def_validate_code"
            android:inputType="number"
            android:maxLength="2"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>